# podrun

./: .devcontainer.json  .gitignore  CLAUDE.md  LICENSE.md  README.md  podrun2_whitelist.py  podrun_whitelist.py  pyproject.toml
.claude/: settings.json
.claude/skills/test/: SKILL.md
docs/: configuration.md  devcontainer.md  getting-started.md  local-store.md  overlays.md  reference.md  store.md  testing.md
live_tests_reference/: test_live.py
podrun/: __init__.py  __main__.py  podrun.py  podrun2.py
tests/: conftest.py  test_cli_parsing.py  test_config.py  test_container_state.py  test_devcontainer.py  test_devcontainer_cli.py  test_entrypoint.py  test_lint.py  test_live.py  test_main.py  test_podman_args.py  test_podrun_cli.py  test_podrun_completions.py  test_podrun_config.py  test_podrun_entrypoint.py  test_podrun_lint.py  test_podrun_main.py  test_podrun_overlays.py  test_podrun_state.py  test_podrun_store_service.py  test_podrun_utils.py  test_setup.py  test_shellcheck.py  test_store.py  test_strip_jsonc.py  test_volume_tilde.py
tests2/: conftest.py  test_podrun2_cli.py  test_podrun2_completions.py  test_podrun2_config.py  test_podrun2_entrypoint.py  test_podrun2_lint.py  test_podrun2_main.py  test_podrun2_overlays.py  test_podrun2_state.py  test_podrun2_store_service.py  test_podrun2_utils.py
